fixed list spacing on homepage

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,8 @@
 }
 
 ul, .list {
-    margin-left: 400px;
-    margin-right: 400px;
+    margin-left: 200px;
+    margin-right: 200px;
     display: inline-block;
     list-style-position: inside;
 }
